--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="page-header">
 
         <!--# NAVBAR -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary h-100">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary h-100 py-3">
             <div class="container-fluid h-100">
 
                 <!--| LOGO -->
@@ -47,7 +47,7 @@
                             <span class="input-group-text border-0" id="addon-wrapping">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </span>
-                            <input type="search" class="form-control border-0 ps-0"
+                            <input type="search" class="form-control border-0 ps-0 fs-6"
                                 placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search"
                                 aria-describedby="addon-wrapping">
                         </div>
@@ -59,13 +59,13 @@
 
                     <ul class="m-0 d-flex align-items-center gap-3">
                         <li class="d-none d-lg-block">
-                            <i class="fa-solid fa-list-ul"></i>
+                            <i class="fa-solid fa-list-ul fa-lg"></i>
                         </li>
                         <li class="d-none d-lg-block">
-                            <i class="fa-solid fa-circle-question"></i>
+                            <i class="fa-solid fa-circle-question fa-lg"></i>
                         </li>
                         <li class="d-none d-lg-block">
-                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                            <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
                         </li>
                         <li>
                             <div class="dropdown">
@@ -136,13 +136,13 @@
 
             <!--| MAIN HEADER -->
             <header class="main-header text-white  py-4">
-                <div class="container-fluid d-md-flex justify-content-between align-items-start gap-5">
+                <div class="container-fluid d-md-flex justify-content-between align-items-start gap-5 gap-md-4">
 
                     <!-- TOP MAIN HEADER -->
-                    <div class="top-mhead order-md-1">
+                    <div class="top-mhead order-md-1 d-flex align-items-center flex-nowrap">
 
                         <!-- OFFCANVAS LINK -->
-                        <a class="me-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                        <a class="me-3 text-nowrap" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                             aria-controls="offcanvasExample">
                             Nuovo studente
                         </a>
@@ -181,10 +181,10 @@
                     </div>
 
                     <!-- MIDDLE MAIN HEADER -->
-                    <div class="mid-mhead py-4 py-md-0">
-                        <div class="box-title d-flex align-items-center gap-2">
+                    <div class="mid-mhead flex-shrink-0 py-4 py-md-0">
+                        <div class="box-title">
                             <h1>Boolean</h1>
-                            <span class="badge rounded-pill badge-header">Piano blaze</span>
+                            <span class="badge rounded-pill badge-header mb-1">Piano blaze</span>
                         </div>
                         <div class="box-app d-flex align-items-center gap-1">
                             <span class="badge rounded-pill badge-header">3 app</span>
@@ -226,11 +226,11 @@
                                 </div>
                                 <!-- CARD BODY -->
                                 <div class="card-body">
-                                    <table class="table table-hover">
+                                    <table class="table table-hover text-center">
                                         <!-- TABLE HEAD -->
                                         <thead>
                                             <tr>
-                                                <th scope="col">Nome</th>
+                                                <th scope="col" class="text-start">Nome</th>
                                                 <th scope="col" class="d-none d-md-table-cell">Data inizio</th>
                                                 <th scope="col" class="d-none d-sm-table-cell">ROI</th>
                                                 <th scope="col">Stato</th>
@@ -241,18 +241,22 @@
                                         <!-- TABLE BODY -->
                                         <tbody>
                                             <tr>
-                                                <th scope="row">Classe 76</th>
+                                                <th scope="row" class="text-start text-nowrap">
+                                                    <img src="img/class-avatar.jpg" class="class-avatar"
+                                                        alt="class-avatar">
+                                                    Classe 76
+                                                </th>
                                                 <td class="d-none d-md-table-cell">11 Febbraio 2021</td>
                                                 <td class="d-none d-sm-table-cell">20%</td>
-                                                <td>done</td>
-                                                <td>+ +</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">Classe 77</th>
-                                                <td class="d-none d-md-table-cell">11 Febbraio 2021</td>
-                                                <td class="d-none d-sm-table-cell">20%</td>
-                                                <td>done</td>
-                                                <td>+ +</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td class="text-nowrap">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -275,21 +279,13 @@
                                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                                     data-bs-target="#collapseOne" aria-expanded="true"
                                                     aria-controls="collapseOne">
-                                                    Accordion Item #1
+                                                    Come aggiungere un nuovo studente?
                                                 </button>
                                             </h2>
                                             <div id="collapseOne" class="accordion-collapse collapse"
                                                 data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
-                                                    <strong>This is the first item's accordion body.</strong> It is
-                                                    shown by default, until the collapse plugin adds the appropriate
-                                                    classes that we use to style each element. These classes control
-                                                    the overall appearance, as well as the showing and hiding via
-                                                    CSS transitions. You can modify any of this with custom CSS or
-                                                    overriding our default variables. It's also worth noting that
-                                                    just about any HTML can go within the
-                                                    <code>.accordion-body</code>, though the transition does limit
-                                                    overflow.
+                                                    Clicca sul + in alto nella sezione blu.
                                                 </div>
                                             </div>
                                         </div>
@@ -298,21 +294,13 @@
                                                 <button class="accordion-button collapsed" type="button"
                                                     data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                     aria-expanded="false" aria-controls="collapseTwo">
-                                                    Accordion Item #2
+                                                    Come posso accedere alle informazioni del mio account?
                                                 </button>
                                             </h2>
                                             <div id="collapseTwo" class="accordion-collapse collapse"
                                                 data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
-                                                    <strong>This is the second item's accordion body.</strong> It is
-                                                    hidden by default, until the collapse plugin adds the
-                                                    appropriate classes that we use to style each element. These
-                                                    classes control the overall appearance, as well as the showing
-                                                    and hiding via CSS transitions. You can modify any of this with
-                                                    custom CSS or overriding our default variables. It's also worth
-                                                    noting that just about any HTML can go within the
-                                                    <code>.accordion-body</code>, though the transition does limit
-                                                    overflow.
+                                                    Clicca sull'icona della campanella.
                                                 </div>
                                             </div>
                                         </div>
@@ -321,21 +309,13 @@
                                                 <button class="accordion-button collapsed" type="button"
                                                     data-bs-toggle="collapse" data-bs-target="#collapseThree"
                                                     aria-expanded="false" aria-controls="collapseThree">
-                                                    Accordion Item #3
+                                                    Posso usare questa dashboard da mobile?
                                                 </button>
                                             </h2>
                                             <div id="collapseThree" class="accordion-collapse collapse"
                                                 data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
-                                                    <strong>This is the third item's accordion body.</strong> It is
-                                                    hidden by default, until the collapse plugin adds the
-                                                    appropriate classes that we use to style each element. These
-                                                    classes control the overall appearance, as well as the showing
-                                                    and hiding via CSS transitions. You can modify any of this with
-                                                    custom CSS or overriding our default variables. It's also worth
-                                                    noting that just about any HTML can go within the
-                                                    <code>.accordion-body</code>, though the transition does limit
-                                                    overflow.
+                                                    Certo!
                                                 </div>
                                             </div>
                                         </div>
@@ -359,9 +339,18 @@
                                 <!-- CARD BODY -->
                                 <div class="card-body">
                                     <ul class="list-group list-group-flush border rounded-2">
-                                        <li class="list-group-item"><input type="checkbox">An item</li>
-                                        <li class="list-group-item"><input type="checkbox">A second item</li>
-                                        <li class="list-group-item"><input type="checkbox">A third item</li>
+                                        <li class="list-group-item d-flex gap-2">
+                                            <input type="checkbox">
+                                            Kickoff nuove classi
+                                        </li>
+                                        <li class="list-group-item d-flex gap-2">
+                                            <input type="checkbox">
+                                            Lezione su Bootstrap 5 in classe #116
+                                        </li>
+                                        <li class="list-group-item d-flex gap-2">
+                                            <input type="checkbox">
+                                            Controllare username github studenti
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -374,21 +363,20 @@
                                     <div class="card-body border border-bottom-0 rounded-top-2">
 
                                         <img src="img/stats.jpeg" class="card-img-top" id="stats" alt="stats">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h6 class="card-title">Utenti attivi</h6>
                                         <p class="card-text">
-                                            Some quick example text to build on the card title and make
-                                            up
-                                            the bulk of the card's content.
+                                            Lista degli utenti attivi in piattaforma nell'ultimo mese
                                         </p>
                                     </div>
 
                                     <ul class="list-group list-group-flush border">
-                                        <li class="list-group-item">An item</li>
-                                        <li class="list-group-item">A second item</li>
-                                        <li class="list-group-item">A third item</li>
+                                        <li class="list-group-item">Gennaio: 1200</li>
+                                        <li class="list-group-item">Febbraio: 800</li>
+                                        <li class="list-group-item">Marzo: 1500</li>
                                     </ul>
                                     <div class="card-footer border border-top-0">
-                                        <a href="#" class="card-link">Card link</a>
+                                        <a href="#" class="card-link text-decoration-underline">Visualizza report
+                                            approfondito</a>
                                     </div>
                                 </div>
                             </div>
